--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,6 +2,7 @@
 agp = "8.13.1"
 coilCompose = "2.7.0"
 converterGson = "3.0.0"
+datastorePreferences = "1.2.0"
 koinAndroid = "4.1.1"
 koinAndroidxCompose = "4.1.1"
 koinCore = "4.1.1"
@@ -24,6 +25,7 @@ kspVersion = "2.2.0-2.0.2"
 
 [libraries]
 androidx-compose-material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "materialIconsExtended" }
+androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastorePreferences" }
 androidx-material3 = { module = "androidx.compose.material3:material3", version.ref = "material3" }
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
 androidx-room = { group= "androidx.room", name = "room-runtime", version.ref = "roomVersion"}
